--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,34 @@
-name: Generate Datas
+# This file generates the snake animation at the bottom of the README
+# It must be placed in: .github/workflows/main.yml
+
+name: Generate GitHub Snake
+
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule:
+    # Runs every 12 hours
+    - cron: "0 */12 * * *"
+  
+  # Allows you to run it manually from the Actions tab
   workflow_dispatch:
+
 jobs:
   build:
-    name: Jobs to update datas
     runs-on: ubuntu-latest
+    
     steps:
-      # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
-with:
+        with:
+          # Your GitHub username
           github_user_name: Lucian-Adrian
+          
+          # The path where the SVG will be saved
+          # The README is already configured to look for this exact path
           svg_out_path: dist/github-contribution-grid-snake.svg
+
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
+          # This action commits the new SVG to the 'output' branch
           target_branch: output
           build_dir: dist
         env:
